<resources>
    <string name="app_name">VoThanhDuy_1706020015</string>
    <string name="add">Add</string>
    <string name="tittel">LOGN IN Google</string>
    <string name="delete">Xóa</string>
    <string name="detail">chi tiết</string>
    <string name="description">Description:</string>
    <string name="id">ID:</string>
    <string name="product_name">Product:</string>
    <string name="btn_ok">ok</string>
    <string name="btn_cancel">cancel</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_save">Save</string>
    <string name="btn_back">Back</string>
    <string name="ID">ID</string>
    <string name="Logout">Logout</string>
    <string name="AddSp">Thêm Sản Phẩm</string>
    <string name="btnSyn">Syn</string>
    <string name="btnSync">sync</string>
</resources>
