<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/main_btnAdd"
            android:layout_width="156dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/add" />

        <Button
            android:id="@+id/main_btnLogout"
            android:layout_width="156dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/Logout" />

        <Button
            android:id="@+id/main_btnSync"
            android:layout_width="156dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/btnSync" />

        <ProgressBar
            android:id="@+id/indeterminateBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="4dp">

    </android.support.v7.widget.RecyclerView>


</LinearLayout>