<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cardview_dark_background">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:text="Sửa &amp; Lưu Sản Phẩm"
            android:textAlignment="center"
            android:textColor="@color/black_"
            android:textSize="30sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/id"/>

        <EditText
            android:id="@+id/detail_edit_id"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:editable="false"
            tools:ignore="Deprecated" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/product_name"
            android:id="@+id/detail_name"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="match_parent"
            android:id="@+id/detail_edit_name"
            android:enabled="false"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/product_name"
            android:id="@+id/detail_producer_code"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="match_parent"
            android:id="@+id/detail_edit_producer_code"
            android:enabled="false"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/product_name"
            android:id="@+id/detail_price_credits"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="match_parent"
            android:id="@+id/detail_edit_price_credits"
            android:enabled="false"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/description"
            android:id="@+id/detail_des"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="match_parent"
            android:id="@+id/detail_edit_des"
            android:enabled="false"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/detail_btn_edit"
            android:text="@string/btn_edit"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/detail_btn_save"
            android:text="@string/btn_save"
            android:enabled="false"/>
        <!--<Button-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/detail_btn_back"-->
            <!--android:text="@string/btn_back"/>-->
    </LinearLayout>
</LinearLayout>